hotfix: fix identity test